fix: adjust spacing in hero section for improved layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,12 @@ main{
   display: block;
 }
 
-
+.hero-icons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
 
 
 .chillzone {
